--- a/public/index.html
+++ b/public/index.html
@@ -3,38 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Items Page</title>
-  <style>
-    .item {
-      border: 1px solid #ddd;
-      padding: 10px;
-      margin: 10px;
-    }
-  </style>
+  <title>Items and Users</title>
 </head>
 <body>
-  <h1>Available Items</h1>
-  <div id="items-container"></div>
+  <h1>Item List</h1>
+  <ul id="items-list"></ul>
+
+  <h2>Create User</h2>
+  <form id="user-form">
+    <input type="text" id="username" placeholder="Enter your username" required>
+    <input type="email" id="email" placeholder="Enter your email" required>
+    <button type="submit">Submit</button>
+  </form>
+  <p id="user-feedback"></p>
 
   <script>
-    // Fetch data from the API and display it
+    // Fetch and display items
     fetch('/api/items')
       .then(response => response.json())
       .then(data => {
-        const container = document.getElementById('items-container');
+        const list = document.getElementById('items-list');
+        list.innerHTML = '';
         data.forEach(item => {
-          const itemDiv = document.createElement('div');
-          itemDiv.className = 'item';
-          itemDiv.innerHTML = `
-            <h2>${item.item_name}</h2>
-            <p>${item.item_description}</p>
-            <p>Price: $${item.price}</p>
-            <img src="${item.image_url}" alt="${item.item_name}" width="150">
-          `;
-          container.appendChild(itemDiv);
+          const li = document.createElement('li');
+          li.textContent = `${item.item_name}: $${item.price}`;
+          list.appendChild(li);
         });
       })
       .catch(err => console.error('Error fetching items:', err));
+
+    // Handle user form submission
+    document.getElementById('user-form').addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const username = document.getElementById('username').value;
+      const email = document.getElementById('email').value;
+
+      fetch('/api/users', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ username, email })
+      })
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('user-feedback').textContent = data.message || data.error;
+        })
+        .catch(err => console.error('Error creating user:', err));
+    });
   </script>
 </body>
 </html>
