--- a/public/index.html
+++ b/public/index.html
@@ -5,103 +5,217 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Items and Users</title>
 
-    
-</head>
-<body>
-  <h1>Item List</h1>
-  <ul id="items-list"></ul>
+  <!-- Item Grid styling -->
+  <style>
+    body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        background-color: #f5f5f5;
+        text-align: center;
+    }
 
-  <h2>Create User</h2>
-  <form id="user-form">
-    <input type="text" id="username" placeholder="Enter your username" required>
-    <input type="email" id="email" placeholder="Enter your email" required>
-    <button type="submit">Submit</button>
-  </form>
-  <p id="user-feedback"></p>
+    #itemsGrid {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+        padding: 20px;
+    }
 
-    <!-- Cart Button -->
-    <button id="cartButton" style="
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #e95f46;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    z-index: 1000;
-    ">Cart</button>
+    .item {
+        flex: 1 1 calc(25% - 20px);
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        background-color: #fff;
+        padding: 15px;
+        transition: transform 0.3s;
+        max-width: 250px;
+    }
 
-    <!-- Cart Sidebar -->
-    <div id="cartSidebar" style="
-    position: fixed;
-    top: 0;
-    right: -300px;
-    width: 300px;
-    height: 100%;
-    background-color: #f1f1f1;
-    box-shadow: -2px 0 5px rgba(0,0,0,0.3);
-    transition: right 0.3s ease;
-    padding: 20px;
-    box-sizing: border-box;
-    z-index: 999;
-    ">
-    <h3>Your Cart</h3>
-    <ul id="cartItems" style="list-style: none; padding: 0;"></ul>
-    <button id="closeCart" style="
-        margin-top: 20px;
-        padding: 10px;
-        background-color: #e95f46;
-        color: #f1f1f1;
+    .item:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .item img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+    .item h4 {
+        margin: 10px 0;
+    }
+
+    .item p {
+        color: #555;
+        margin: 5px 0;
+    }
+
+    .item button {
+        background-color: #28a745;
+        color: white;
         border: none;
+        padding: 10px;
         border-radius: 5px;
         cursor: pointer;
-    ">Close Cart</button>
-    </div>
+        margin-top: 10px;
+        width: 100%;
+    }
+
+    .item button:hover {
+        background-color: #218838;
+    }
+</style>  
+
+</head>
+
+<body>
+  <h1 id='items list' style="
+  color: #e95f46;
+  font-size: 38px;
+  font-family: sans-serif;
+">Available Items</h1>
+
+<div id="itemsGrid"></div>
 
 
+<h2>Create User</h2>
+<form id="user-form">
+  <input type="text" id="username" placeholder="Enter your username" required>
+  <input type="email" id="email" placeholder="Enter your email" required>
+  <button type="submit">Submit</button>
+</form>
+<p id="user-feedback"></p>
 
-  <script>
+  <!-- Cart Button -->
+  <button id="cartButton" style="
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: #e95f46;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  z-index: 1000;
+  ">Cart</button>
+
+  <!-- Cart Sidebar -->
+  <div id="cartSidebar" style="
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 300px;
+  height: 100%;
+  background-color: #f1f1f1;
+  box-shadow: -2px 0 5px rgba(0,0,0,0.3);
+  transition: right 0.3s ease;
+  padding: 20px;
+  box-sizing: border-box;
+  z-index: 999;
+  ">
+  <h3>Your Cart</h3>
+  <ul id="cartItems" style="list-style: none; padding: 0;"></ul>
+  <button id="closeCart" style="
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #e95f46;
+      color: #f1f1f1;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+  ">Close Cart</button>
+  </div>
+
+<script>
+
+  async function fetchItems() {
+      try {
+          const response = await fetch('/api/items');
+          const items = await response.json();
+
+          const itemsGrid = document.getElementById('itemsGrid');
+          itemsGrid.innerHTML = ''; // Clear previous items
+
+          items.forEach(item => {
+              const itemDiv = document.createElement('div');
+              itemDiv.className = 'item';
+
+              itemDiv.innerHTML = `
+                  <img src="${item.image_url || 'https://via.placeholder.com/150'}" alt="${item.item_name}">
+                  <h4>${item.item_name}</h4>
+                  <p>$${item.price}</p>
+                  <button onclick="addToCart('${item.item_name}')">Add to Cart</button>
+              `;
+
+              itemsGrid.appendChild(itemDiv);
+          });
+
+      } catch (error) {
+          console.error('Error fetching items:', error);
+          document.getElementById('itemsGrid').innerHTML = '<p>Failed to load items.</p>';
+      }
+  }
+
+
+        // Placeholder function for adding to cart
+        function addToCart(itemName) {
+            alert(`${itemName} added to cart!`);
+        }
+
+        // Initialize the items display on page load
+        window.onload = fetchItems;
+
+  
     // Fetch and display items
-fetch('/api/items')
-  .then(response => response.json())
-  .then(data => {
-    const list = document.getElementById('items-list');
-    list.innerHTML = '';
-    data.forEach(item => {
-      const li = document.createElement('li');
+//fetch('/api/items')
+  //.then(response => response.json())
+  //.then(data => {
+    //const list = document.getElementById('items-list');
+    //list.innerHTML = '';
+    //data.forEach(item => {
+      //const li = document.createElement('li');
       
       // Display item name, price, and image
-      li.innerHTML = `
-        <p><strong>${item.item_name}:</strong> $${item.price}</p>
-        <img src="${item.image_url}" alt="${item.item_name}" style="max-width: 200px; max-height: 150px;">
-      `;
-      list.appendChild(li);
-    });
-  })
-  .catch(err => console.error('Error fetching items:', err));
-    // Handle user form submission
-    document.getElementById('user-form').addEventListener('submit', function (e) {
-      e.preventDefault();
+      //li.innerHTML = `
+       // <p><strong>${item.item_name}:</strong> $${item.price}</p>
+       // <img src="${item.image_url}" alt="${item.item_name}" style="max-width: 200px; max-height: 150px;">
+     // `;
+     // list.appendChild(li);
+   // });
+ // }) 
 
-      const username = document.getElementById('username').value;
-      const email = document.getElementById('email').value;
+  //.catch(err => console.error('Error fetching items:', err));
 
-      fetch('/api/users', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, email })
+  // Handle user form submission
+  document.getElementById('user-form').addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    const username = document.getElementById('username').value;
+    const email = document.getElementById('email').value;
+
+    fetch('/api/users', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ username, email })
+    })
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('user-feedback').textContent = data.message || data.error;
       })
-        .then(response => response.json())
-        .then(data => {
-          document.getElementById('user-feedback').textContent = data.message || data.error;
-        })
-        .catch(err => console.error('Error creating user:', err));
-    });
+      .catch(err => console.error('Error creating user:', err));
+  });
 
-    // Open Cart Sidebar
+
+  // =================================================
+   // Open Cart Sidebar
   document.getElementById('cartButton').addEventListener('click', () => {
     document.getElementById('cartSidebar').style.right = '0';
   });
@@ -126,6 +240,7 @@ fetch('/api/items')
     li.style.marginBottom = '10px';
     cartList.appendChild(li);
   });
+  // =================================================
   </script>
 </body>
 </html>
