--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@ async function fetchItems() {
 
     const items = await response.json();
 
-    console.log('Items reeived: ', items);
+    console.log('Items received: ', items);
 
     // Display items 
     const itemsGrid = document.getElementById('itemsGrid');
@@ -196,17 +196,17 @@ function addToCart(item_id, item_name, price, image_url) {
 
 // Function to update the cart display in the sidebar
 function updateCartUI() {
-    const cartList = document.getElementById('cartItems');
-    cartList.innerHTML = '';
+  const cartList = document.getElementById('cartItems');
+  cartList.innerHTML = '';
 
-    cart.forEach(item => {
-        const li = document.createElement('li');
-        li.innerHTML = `
-            <img src="${item.image_url}" alt="${item.item_name}" style="width: 50px; height: 50px; border-radius: 5px; margin-right: 10px;">
-            <strong>${item.item_name}</strong> - $${item.price.toFixed(2)} (x${item.quantity})
-        `;
-        cartList.appendChild(li);
-    });
+  cart.forEach(item => {
+    const li = document.createElement('li');
+    li.innerHTML = `
+      <img src="${item.image_url}" alt="${item.item_name}" style="width: 50px; height: 50px; border-radius: 5px; margin-right: 10px;">
+      <strong>${item.item_name}</strong> - $${item.price.toFixed(2)} (x${item.quantity})
+    `;
+    cartList.appendChild(li);
+  });
 }
 
   // Initialize the items display on page load
