--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,11 @@
 </head>
 
 <body>
+
+  <!-- Search Input -->
+  <input type="text" id="searchInput" placeholder="Search for items...">
+  <button id="searchButton">Search</button>
+
   <h1 id='items list' style="
   color: #f03615;
   font-size: 38px;
@@ -134,6 +139,7 @@
   ">Close Cart</button>
   </div>
 
+
 <script>
 
 // Cart array to store selected items
@@ -142,23 +148,18 @@ let cart = [];
 //user id for storing cart data
 let currentUserId = null;
 
-// Function to fetch items from server and display them
+// Fetch items on page load
+document.addEventListener('DOMContentLoaded', fetchItems);
+
 async function fetchItems() {
   try {
     const response = await fetch('/api/items');
-
-    //log response status
-    console.log('Response status:' + response.status);
-
     if (!response.ok) {
-      throw new Error('Network error! status: ', response.status);
+      throw new Error(`HTTP error! status: ${response.status}`);
     }
-
     const items = await response.json();
+    console.log('Items:', items); // Log the items
 
-    console.log('Items received: ', items);
-
-    // Display items 
     const itemsGrid = document.getElementById('itemsGrid');
     itemsGrid.innerHTML = ''; // Clear previous items
 
@@ -170,7 +171,7 @@ async function fetchItems() {
         <img src="${item.image_url || 'https://via.placeholder.com/150'}" alt="${item.item_name}">
         <h4>${item.item_name}</h4>
         <p>$${parseFloat(item.price).toFixed(2)}</p>
-        <button onclick="addToCart(${item.item_id}, '${item.item_name}', ${item.price}, '${item.image_url}')">Add to Cart</button>
+        <button onclick="addToCart(${item.item_id}, '${item.item_name}', ${parseFloat(item.price)}, '${item.image_url}')">Add to Cart</button>
       `;
 
       itemsGrid.appendChild(itemDiv);
@@ -213,23 +214,33 @@ function updateCartUI() {
   window.onload = fetchItems;
 
   // Handle user form submission
-  document.getElementById('user-form').addEventListener('submit', function (e) {
-    e.preventDefault();
+  document.getElementById('user-form').addEventListener('submit', async function (e) {
+  e.preventDefault();
 
-    const username = document.getElementById('username').value;
-    const email = document.getElementById('email').value;
+  const username = document.getElementById('username').value;
+  const email = document.getElementById('email').value;
 
-    fetch('/api/users', {
+  try {
+    const response = await fetch('/api/users', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ username, email })
-    })
-      .then(response => response.json())
-      .then(data => {
-        document.getElementById('user-feedback').textContent = data.message || data.error;
-      })
-      .catch(err => console.error('Error creating user:', err));
-  });
+    });
+
+    if (response.ok) {
+      const data = await response.json();
+      currentUserId = data.userId; // Ensure currentUserId is set correctly
+      document.getElementById('user-feedback').textContent = 'User created successfully!';
+      fetchItems();
+      fetchCart();
+    } else {
+      const data = await response.json();
+      document.getElementById('user-feedback').textContent = data.message || data.error;
+    }
+  } catch (error) {
+    console.error('Error creating user:', error);
+  }
+});
 
   // Fetch cart items
   async function fetchCart() {
@@ -246,8 +257,41 @@ function updateCartUI() {
     }
   }
 
-  // Fetch items on page load
-  document.addEventListener('DOMContentLoaded', fetchItems);
+  // Search items
+async function searchItems() {
+  const searchTerm = document.getElementById('searchInput').value;
+  console.log('Search term:', searchTerm); // Log the search term
+  try {
+    const response = await fetch(`/api/search?q=${encodeURIComponent(searchTerm)}`);
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+    const items = await response.json();
+    console.log('Search results:', items); // Log the search results
+
+    const itemsGrid = document.getElementById('itemsGrid');
+    itemsGrid.innerHTML = ''; // Clear previous items
+
+    items.forEach(item => {
+      const itemDiv = document.createElement('div');
+      itemDiv.className = 'item';
+
+      itemDiv.innerHTML = `
+        <img src="${item.image_url || 'https://via.placeholder.com/150'}" alt="${item.item_name}">
+        <h4>${item.item_name}</h4>
+        <p>$${parseFloat(item.price).toFixed(2)}</p>
+        <button onclick="addToCart(${item.item_id}, '${item.item_name}', ${parseFloat(item.price)}, '${item.image_url}')">Add to Cart</button>
+      `;
+
+      itemsGrid.appendChild(itemDiv);
+    });
+
+  } catch (error) {
+    console.error('Error searching items:', error);
+    document.getElementById('itemsGrid').innerHTML = '<p>Failed to load items.</p>';
+  }
+}
+
 
   // Open Cart Sidebar
   document.getElementById('cartButton').addEventListener('click', () => {
@@ -258,6 +302,9 @@ function updateCartUI() {
   document.getElementById('closeCart').addEventListener('click', () => {
     document.getElementById('cartSidebar').style.right = '-300px';
   });
+
+  // Search Button Click
+  document.getElementById('searchButton').addEventListener('click', searchItems);
 
   </script>
 </body>
