fixed add to cart

--- a/public/index.html
+++ b/public/index.html
@@ -55,35 +55,46 @@ document.addEventListener('DOMContentLoaded', fetchItems);
 
 async function fetchItems() {
   try {
-    const response = await fetch('/api/items');
-    if (!response.ok) {
-      throw new Error(`HTTP error! status: ${response.status}`);
+      const response = await fetch('/api/items');
+      if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+      }
+      const items = await response.json();
+      console.log('Items:', items); // Log the items
+
+      const itemsGrid = document.getElementById('itemsGrid');
+      itemsGrid.innerHTML = ''; // Clear previous items
+
+      items.forEach(item => {
+          const itemDiv = document.createElement('div');
+          itemDiv.className = 'item';
+
+          itemDiv.innerHTML = `
+              <img src="${item.image_url}" alt="${item.item_name}" class="item-image">
+              <h3 class="item-name">${item.item_name}</h3>
+              <p class="item-description">${item.item_description}</p>
+              <p class="item-price">$${parseFloat(item.price).toFixed(2)}</p>
+              <button class="add-to-cart" data-id="${item.id}" data-name="${item.item_name}" data-price="${item.price}" data-image="${item.image_url}">Add to Cart</button>
+          `;
+
+          itemsGrid.appendChild(itemDiv);
+      });
+
+      // Add event listeners to "Add to Cart" buttons
+      document.querySelectorAll('.add-to-cart').forEach(button => {
+          button.addEventListener('click', function () {
+              const itemId = this.getAttribute('data-id');
+              const itemName = this.getAttribute('data-name');
+              const itemPrice = parseFloat(this.getAttribute('data-price'));
+              const itemImage = this.getAttribute('data-image');
+              addToCart(itemId, itemName, itemPrice, itemImage);
+          });
+      });
+
+    } catch (error) {
+      console.error('Error fetching items:', error);
+      document.getElementById('itemsGrid').innerHTML = '<p>Failed to load items.</p>';
     }
-    const items = await response.json();
-    console.log('Items:', items); // Log the items
-
-    const itemsGrid = document.getElementById('itemsGrid');
-    itemsGrid.innerHTML = ''; // Clear previous items
-
-    items.forEach(item => {
-      const itemDiv = document.createElement('div');
-      itemDiv.className = 'item';
-
-      itemDiv.innerHTML = `
-      <img src="${item.image_url}" alt="${item.item_name}" class="item-image">
-                        <h3 class="item-name">${item.item_name}</h3>
-                        <p class="item-description">${item.item_description}</p>
-                        <p class="item-price">$${parseFloat(item.price).toFixed(2)}</p>
-                        <button class="add-to-cart" data-id="${item.id}">Add to Cart</button>
-                    `;
-
-      itemsGrid.appendChild(itemDiv);
-    });
-
-  } catch (error) {
-    console.error('Error fetching items:', error);
-    document.getElementById('itemsGrid').innerHTML = '<p>Failed to load items.</p>';
-  }
 }
 
 // Function to add items to the users cart
@@ -180,9 +191,10 @@ async function searchItems() {
       itemDiv.className = 'item';
 
       itemDiv.innerHTML = `
-        <img src="${item.image_url || 'https://via.placeholder.com/150'}" alt="${item.item_name}">
-        <h4>${item.item_name}</h4>
-        <p>$${parseFloat(item.price).toFixed(2)}</p>
+        <img src="${item.image_url}" alt="${item.item_name}" class="item-image">
+        <h3 class="item-name">${item.item_name}</h3>
+        <p class="item-description">${item.item_description}</p>
+        <p class="item-price">$${parseFloat(item.price).toFixed(2)}</p>
         <button onclick="addToCart(${item.item_id}, '${item.item_name}', ${parseFloat(item.price)}, '${item.image_url}')">Add to Cart</button>
       `;
 
