added cart counter

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,9 @@ font-family: sans-serif;
     <p id="user-feedback"></p>
 
     <!-- Cart Button -->
-    <button id="cartButton" class="cart-button">Cart</button>
+    <button id="cartButton" class="cart-button">
+        Cart (<span id="cartCount">0</span>)
+    </button>
 
     <!-- Cart Sidebar -->
     <div id="cartSidebar" class="cart-sidebar">
