updated styling and ReadMe

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <button id="searchButton">Search</button>
 
     <h1 id='items list' style="
-color: #f03615;
+color: #2f1847ff;
 font-size: 38px;
 font-family: sans-serif;
 ">Available Items</h1>
@@ -40,7 +40,7 @@ font-family: sans-serif;
 
     <!-- Cart Button -->
     <button id="cartButton" class="cart-button">
-        Cart (<span id="cartCount">0</span>)
+        Cart <span id="cartCount" class="cart-counter">0</span>
     </button>
 
     <!-- Cart Sidebar -->
